<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hive_nav_brain</name>
  <version>0.0.0</version>
  <description>Hive navigation brain node with 10Hz loop and route requests</description>
  <maintainer email="thomas.raynal@hiverobotics.fr">thomas24</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>hive_interface2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>

  <!-- (Launch Nav2 si tu utilises le launch combiné) -->
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
