<?xml version="1.0"?>
<package format="3">
  <name>hive_interface2</name>
  <version>0.0.1</version>
  <description>Hive Robotics interface definitions (messages, services, actions)</description>

  <maintainer email="thomas.raynal@hiverobotics.fr">Thomas Raynal</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROSIDL interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Other message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Obligatoire pour ROS 2 Jazzy -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
